--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,16 @@
             android:visibility="gone" />
 
         -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000"
+        android:text="This is Heading "
+        android:textSize="18sp"
+        android:textAllCaps="true"
+        android:textAlignment="center"
+        android:textStyle="bold"/>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -74,7 +84,11 @@
             android:id="@+id/text_view_result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000" />
+            android:textColor="#000"
+            android:textSize="16sp"
+            android:textAllCaps="true"
+            android:textAlignment="center"
+            android:textStyle="bold"/>
 
     </androidx.core.widget.NestedScrollView>
 
