--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#000"
-        android:text="This is Heading "
+        android:text="This is Upper Heading "
         android:textSize="18sp"
         android:textAllCaps="true"
         android:textAlignment="center"
@@ -81,6 +81,16 @@
         android:layout_height="wrap_content"
         android:textColor="#000"
         android:text="This is Middle Heading "
+        android:textSize="18sp"
+        android:textAllCaps="true"
+        android:textAlignment="center"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000"
+        android:text="This is Lower Heading "
         android:textSize="18sp"
         android:textAllCaps="true"
         android:textAlignment="center"
